--- a/example/pom.xml
+++ b/example/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com</groupId>
-  <artifactId>firstshot</artifactId>
+  <artifactId>example</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>firstshot Maven Webapp</name>
+  <name>example Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -16,7 +16,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>firstshot</finalName>
+    <finalName>example</finalName>
       <plugins>
           <plugin>
               <groupId>org.apache.tomcat.maven</groupId>
